Ajout de plus de progrès qui donnent un item du mod en récompense + refacto